# AvalonGame

./: LICENSE  README.md  pyproject.toml
src/avalongame/: communications.py  constants.py  server.py
tests/: test_client.py  test_server.py
