[project]
name = "AvalonGame"
version = "0.1.0"
description = "Avalon game"
authors = [
    {name = "Wayne Lai", email = "waynelai01011231@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
